--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "nft-minting-template",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
+  }
+,
   "dependencies": {
     "@coinbase/onchainkit": "^0.33.2",
+    "@coinbase/wallet-sdk": "^4.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
